--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </div>
 
     <div class="article">
+        <blockquote>
     <p><b>শিক্ষনবিশ:</b></p> 
         <p>জনাব, আমার বাবা একজন ভালো মানুষ ছিলেন, আমার এলাকার এক চায়ের দোকানদার রুস্তম চাচা উনিও অনেক ভালো লোক ছিলেন আমার স্বচক্ষে দেখা। আবার আপনার বড় ছেলে একজনের জীবন বাঁচাতে গিয়ে প্রাণ হারান। তো তারা প্রায় অল্প বয়সে মারা গেলেন, আমি জানি এবং মানি জীবন মরণ সবই স্রাষ্টার হাতে বাট কেনো ভালো মানুষদের অধিকাংশই অকালে মারা যান?</p>
         <p><b>শিক্ষক:</b></p> 
@@ -23,6 +24,7 @@
         <p><b>শিক্ষক:</b></p>
         <p>এটাই তোমার প্রশ্নের উত্তর।</p>
         </p>
+        </blockquote>
     </div>
 
     
