--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="feature.png">
 </head>
-<body>
+<body style="background-color:powderblue;">
+
     <div class="heading">
     <h1>কেনো ভালো মানুষদের অধিকাংশই অকালে মারা যান?</h1>
     </div>
