--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 
     <div class="article">
      
-    <p><b>শিক্ষনবিশ:</b></p> 
-        <p>জনাব, আমার বাবা একজন ভালো মানুষ ছিলেন, আমার এলাকার এক চায়ের দোকানদার রুস্তম চাচা উনিও অনেক ভালো লোক ছিলেন আমার স্বচক্ষে দেখা। আবার আপনার বড় ছেলে একজনের জীবন বাঁচাতে গিয়ে প্রাণ হারান। তো তারা প্রায় অল্প বয়সে মারা গেলেন, আমি জানি এবং মানি জীবন মরণ সবই স্রাষ্টার হাতে বাট কেনো ভালো মানুষদের অধিকাংশই অকালে মারা যান?</p>
-        <p><b>শিক্ষক:</b></p> 
-        <p>আচ্ছা, আমাকে বলোতো ওইযে পাশের বাগান হতে একটা ফুল তুলে আনতে বললে কেমন ফুল আনবে?</p>
-        <p><b>শিক্ষানবিশ:</b></p>
-        <p>অবশ্যই সুন্দরতম যেটা সেটাই আনবো।</p>
-        <p><b>শিক্ষক:</b></p>
-        <p>এটাই তোমার প্রশ্নের উত্তর।</p>
+    <p class="position"><b>শিক্ষনবিশ:</b></p> 
+        <p class="position">জনাব, আমার বাবা একজন ভালো মানুষ ছিলেন, আমার এলাকার এক চায়ের দোকানদার রুস্তম চাচা উনিও অনেক ভালো লোক ছিলেন আমার স্বচক্ষে দেখা। আবার আপনার বড় ছেলে একজনের জীবন বাঁচাতে গিয়ে প্রাণ হারান। তো তারা প্রায় অল্প বয়সে মারা গেলেন, আমি জানি এবং মানি জীবন মরণ সবই স্রাষ্টার হাতে বাট কেনো ভালো মানুষদের অধিকাংশই অকালে মারা যান?</p>
+        <p class="position"><b>শিক্ষক:</b></p> 
+        <p class="position">আচ্ছা, আমাকে বলোতো ওইযে পাশের বাগান হতে একটা ফুল তুলে আনতে বললে কেমন ফুল আনবে?</p>
+        <p class="position"><b>শিক্ষানবিশ:</b></p>
+        <p class="position">অবশ্যই সুন্দরতম যেটা সেটাই আনবো।</p>
+        <p class="position"><b>শিক্ষক:</b></p>
+        <p class="position">এটাই তোমার প্রশ্নের উত্তর।</p>
         </p>
      
     </div>
